infrastructure/dev/keycloak/keycloak-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app.kubernetes.io/name: keycloak
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  serviceName: "keycloak"
  replicas: 1
  minReadySeconds: 10 # by default is 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - image: quay.io/keycloak/keycloak:18.0.1
        args: ["start-dev"]
        name: keycloak
        resources:
          requests:
            cpu: "1200m"
            memory: "1500Mi"
          limits:
            cpu: "2500m"
            memory: "2500Mi"
        ports:
        - name: jgroups
          containerPort: 7600
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /realms/master
            port: http
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /realms/master
            port: http
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
