infrastructure/dev/keycloak/keycloak-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app.kubernetes.io/name: keycloak
spec:
  ports:
  - name: http-8080
    protocol: TCP
    port: 8080
    targetPort: http
  - name: http-8443
    protocol: TCP
    port: 8443
    targetPort: https
  clusterIP: None
  selector:
    app.kubernetes.io/name: keycloak
