infrastructure/dev/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    kubernetes.io/configuration-snippet: |
      proxy_set_header Host $host;
      proxy_set_header X-Forwarded-Proto: https;
spec:
  ingressClassName: nginx
  rules:
  - host: keycloak.systemtracker.no-ip.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
  tls:
    - hosts:
        - keycloak.systemtracker.no-ip.org
      secretName: keycloak-tls-secret
